--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,30 @@
-# Build directories
 build/
 bin/
-
-# Backup
 backup/
-
-# Prerequisites
+dev.sh
 *.d
-
-# Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
-
-# Precompiled Headers
 *.gch
 *.pch
-
-# Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
 *.mod
 *.smod
-
-# Compiled Static libraries
 *.lai
 *.la
 *.a
 *.lib
-
-# Executables
 *.exe
 *.out
 *.app
-
-# Editor specific files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-
-# OS specific files
 .DS_Store
 Thumbs.db
